<resources>
    <string name="app_name">AttendanceSystem</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="enter_your_full_name">Enter Your Full Name*</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_mobile_number">Enter Mobile Number*</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter Your Email*</string>
    <string name="year">Year</string>
    <string name="please_select_year">Please Select Year</string>
    <string name="please_select_department">Please Select Department</string>
    <string name="add_student">Add Student</string>
    <string name="department">Department</string>
    <string name="add_staff">Add Staff</string>
    <string name="cancel">Cancel</string>
</resources>